# drf-generic-contact

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
tests/core/: settings.py  urls.py
tests/testapp/tests/: test_api.py
