[build-system]
requires = ["setuptools>=75", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-generic-contact"
dynamic = ["version"]
description = "An extension of the django-generic-contact that provides REST endpoints for the Contact model."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Alexandra Bruckner", email = "abruckner@anexia-it.com"}]
urls = {Homepage = "https://github.com/anexia/drf-generic-contact"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "django>=4.2,<6.1",
  "django-generic-contact>=1.2,<1.3",
  "djangorestframework>=3.16,<3.17",
]

[project.optional-dependencies]
test = [
  "coverage>=7.13.2"
]
dev = [
  "pre-commit>=4.5,<4.6",
]
build = [
  "build>=1.4.0",
  "twine>=6.2.0",
  "wheel>=0.46.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["drf_generic_contact*"]

[tool.setuptools_scm]
